예외처리 및 테스트코드 수정